src/include/kdb.h

typedef unsigned int uint32_t;
/* Key Name Anatomy

Key::key is the key name. It is a unique identifier for a kdb key.
An exmaple of a complex key name is:

	user:some.user/My Environment/SOME.VAR

From this example:
  Root name = "user:some.user"
      Owner = "some.user"
  Base name = "SOME.VAR"
Parent name = "user:some.user/My Environment"

*/





typedef struct _Key       Key;
int keySetFlag(Key *key);
int keyClearFlag(Key *key);
int keyGetFlag(const Key *key);
ssize_t keySetComment(Key *key, const char *newDesc);
uid_t keyGetUID(const Key *key);
int keySetUID(Key *key, uid_t uid);
gid_t keyGetGID(const Key *key);
int keySetGID(Key *key, gid_t gid);
ssize_t keySetOwner(Key *key, const char *userDomain);
ssize_t keyGetValueSize(const Key *key);
ssize_t keyGetString(const Key *key, char *returnedString, size_t maxSize);
ssize_t keySetString(Key *key, const char *newString);
ssize_t keyGetLink(const Key *key, char *returnedTarget, size_t maxSize);
ssize_t keySetLink(Key *key, const char *target);
time_t keyGetMTime(const Key *key);
time_t keyGetATime(const Key *key);
time_t keyGetCTime(const Key *key);
int keyIsSystem(const Key *key);
int keyIsUser(const Key *key);
int keyGetNamespace(const Key *key);
int keyIsDir(const Key *key);
int keyIsLink(const Key *key);
int keyIsBin(const Key *key);
int keyIsString(const Key *key);
uint32_t keyCompare(const Key *key1, const Key *key2);