src/bindings/scheme/elektra.scm


(define key-set-string! (get-ffi-obj "keySetString" %lib (_fun _key _string -> _ssize_t)))
(define key-get-string (make-get-string-proc "keyGetValueSize" "keyGetString"))

(define key-get-value key-get-string)
(define (key-set-value! key value)
  (cond ((string? value) (key-set-string! key value))
        (else "Invalid value type")))

(define key-set-link! (get-ffi-obj "keySetLink" %lib (_fun _key _string -> _ssize_t)))
(define key-get-link (make-get-string-proc "keyGetLinkSize" "keyGetLink"))

(define key-set-owner! (get-ffi-obj "keySetOwner" %lib (_fun _key _string -> _ssize_t)))
(define key-get-owner (get-ffi-obj "keyOwner" %lib (_fun _key -> _string)))

(define key-set-comment! (get-ffi-obj "keySetComment" %lib (_fun _key _string -> _ssize_t)))
(define key-get-comment (get-ffi-obj "keyComment" %lib (_fun _key -> _string)))

(define key-set-uid! (get-ffi-obj "keySetUID" %lib
                                  (_fun _key _uid_t -> (rv :  _int)
                                        -> (raise-on-nonzero #f rv))))
(define key-get-uid (get-ffi-obj "keyGetUID" %lib (_fun _key -> _uid_t)))

(define key-set-gid! (get-ffi-obj "keySetGID" %lib
                                  (_fun _key _gid_t -> (rv :  _int)
                                        -> (raise-on-nonzero #f rv))))
(define key-get-gid (get-ffi-obj "keyGetGID" %lib (_fun _key -> _gid_t)))

(define key-set-mode! (get-ffi-obj "keySetMode" %lib (_fun _key _mode_t -> _int)))
(define key-get-mode (get-ffi-obj "keyGetMode" %lib (_fun _key -> _mode_t)))
(define key-set-u-mode! (get-ffi-obj "keySetUMode" %lib (_fun _key _mode_t -> _int)))

(define key-get-mtime (get-ffi-obj "keyGetMTime" %lib (_fun _key -> _time_t)))
(define key-get-atime (get-ffi-obj "keyGetATime" %lib (_fun _key -> _time_t)))
(define key-get-ctime (get-ffi-obj "keyGetCTime" %lib (_fun _key -> _time_t)))

; (define key-set-flag! (get-ffi-obj "keySetFlag" %lib (_fun _key -> _int)))
; (define key-clear-flag! (get-ffi-obj "keyClearFlag" %lib (_fun _key -> _int)))
; (define key-get-flag (get-ffi-obj "keyGetFlag" %lib (_fun _key -> _int)))

(define key-get-namespace (get-ffi-obj "keyGetNamespace" %lib (_fun _key -> _int)))

(define (key-predicate name)
  (get-ffi-obj name %lib (_fun _key -> (rv : _int) -> (not (zero? rv)))))

(define key-is-system? (key-predicate "keyIsSystem"))
(define key-is-user? (key-predicate "keyIsUser"))
(define key-is-link? (key-predicate "keyIsLink"))
(define key-is-dir? (key-predicate "keyIsDir"))
(define key-is-bin? (key-predicate "keyIsBin"))
(define key-is-string? (key-predicate "keyIsString"))
(define key-needs-sync? (key-predicate "keyNeedSync"))
(define key-compare (get-ffi-obj "keyCompare" %lib (_fun _key _key -> _key_switches)))
